<resources>
    <string name="app_name">Transporter</string>
    <string name="transporter">Transporter</string>
    <string name="image_icon">Image Icon</string>
    <string name="already_a_member">Already a Member </string>
    <string name="sign_in"> Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="LogIn_company">LogIn Company</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your Password ?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="login_client">LogIn Client</string>
    <string name="company_email">Company Email</string>
    <string name="market_number">Market Number</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="car_type">Car Type</string>
    <string name="payment">Payment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="goods_weight">Goods Weight</string>
    <string name="goods_type">Goods Type</string>
    <string name="service_request">Service Request</string>
    <string name="driver_location">Driver Location</string>
    <string name="driver_name">Driver Name</string>
    <string name="arrival_code">Arrival Code</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="social_media">Social Media</string>
    <string name="add_transporter">Add Transporter</string>
    <string name="contact_us">Contact us</string>
    <string name="order_now">Order Now</string>
    <string name="facebook">Facebook</string>
    <string name="whats_app">Whats App</string>
    <string name="setting_account">Setting Account</string>
    <string name="driver_email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="create">Create</string>
    <string name="regist_car_information">Regist Car Information</string>
    <string name="car_number">Car Number</string>
    <string name="car_color">Car Color</string>
    <string name="your_problem">Your Problem</string>
    <string name="add_picture">Add Picture</string>
    <string name="login_as_driver">Add Driver</string>
    <string name="login_as_car">Add Car</string>
    <string name="company_name">Company Name</string>
    <string name="driver_id">Driver ID</string>
    <string name="show_drivers">Show All Drivers</string>
    <string name="select_company_location">Select Company Location</string>

    <string name="map_box_key">
        pk.eyJ1IjoiZGV2YW1pciIsImEiOiJjangyZXl3MnIwaWNiM3lwNHRsd3pyaWwxIn0.UJaqXVSFRlxkweySMvi_0Q</string>
    <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>
    <string name="user_location_permission_explanation">user_location_permission_not_granted</string>
    <string name="tracking_already_enabled">tracking_already_enabled</string>
    <string name="tracking_enabled">tracking_enabled</string>
    <string name="current_location">current_location</string>
    <string name="company_id">Company ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="click_on_map">Click on map</string>
    <string name="click_me_to_choose_payment">Click me to choose Payment</string>
    <string name="create_client_account">Create Client Account</string>
    <string name="client_login">Client LogIn</string>
    <string name="company_login">Company LogIn</string>
    <string name="create_company_account">Create Company Account</string>
    <string name="show_requests">Show Requests</string>
    <string name="driver_login">Driver Login</string>
    <string name="login_driver">Login Driver</string>
    <string name="distance">Distance</string>
    <string name="whats_app_number">Whats App Number</string>
    <string name="on_state">ON</string>
    <string name="off_state">OFF</string>
    <string name="check_request">Check Request</string>

</resources>
