<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ClientLogInActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/transporter_logIn_client_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/client_login"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/transporter_logIn_client_text_view">

    <EditText
        android:id="@+id/logIn_client_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_border_gray"
        android:gravity="start|center"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorGray"
        android:textSize="16sp"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"
        tools:ignore="Autofill">

    <EditText
        android:id="@+id/logIn_client_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:gravity="start|center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorGray"
        android:textSize="16sp" />
</android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/logIn_client_forget_password_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLayout" />

    <Button
        android:id="@+id/logIn_client_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/logIn_client_forget_password_text_view" />


    <LinearLayout
        android:id="@+id/linear_client_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/logIn_client_sign_in_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/logIn_client_signUp_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>