<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DriverLocationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/driver_location_header_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/driver_location"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driver_location_name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_border_gray"
            android:text="@string/driver_name"
            android:textColor="@color/colorPrimaryMoreDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/driver_location_header_textView" />

        <TextView
            android:id="@+id/driver_location_arrival_code_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/back_border_gray"
            android:text="@string/arrival_code"
            android:textColor="@color/colorPrimaryMoreDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/driver_location_name_textView" />

        <TextView
            android:id="@+id/driver_location_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_border_gray"
            android:text="Map view"
            android:textColor="@color/colorPrimaryMoreDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/driver_location_arrival_code_textView" />

        <Button
            android:id="@+id/driver_location_done_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_solid_primary"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/driver_location_map" />

        <Button
            android:id="@+id/driver_location_finish_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_solid_primary"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/driver_location_map" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>