<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ClientActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:onClick="openClientMapActivity"
        android:id="@+id/client_order_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/order_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/client_contact_us_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/client_facebook_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/client_order_now_button">

        <TextView
            android:id="@+id/client_facebook_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:text="@string/facebook"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/client_whats_app_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/client_facebook_layout">

        <TextView
            android:id="@+id/client_whats_app_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/whats_app"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>