<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.CompanyHomeActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:id="@+id/company_home_add_driver_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/login_as_driver"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/company_home_show_drivers_button"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/company_home_show_drivers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/show_drivers"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/company_home_add_driver_button"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/open_request_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_requests"
        android:textAllCaps="false"
        android:background="@drawable/back_solid_primary"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>